# chatgpt-api

./: .env.example  README.md  SUPPORT.md  docker-compose.yml  pyproject.toml
apps/bridge-console/src/: App.svelte
apps/character-game/: README.md
chatgpt_api/: cli.py
chatgpt_api/api/: admin_store.py  http_utils.py  openai_compat.py
chatgpt_api/providers/chatgpt/: crypto.py  request_capture.py  transport.py
docs/: ACCOUNT_CAPTURE.md  ARCHITECTURE.md  CLI.md  DOCKER.md  OPENAI_COMPATIBILITY.md  OPENCODE_AGENT_ROADMAP.md  PROJECT_ANALYSIS.md
tests/: test_chatgpt_transport.py  test_cli.py  test_crypto.py  test_openai_compat.py
