[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-api"
version = "0.1.0"
description = "Provider-first AI chat and image framework with ChatGPT Web as the first target."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "cryptography>=42",
  "curl_cffi>=0.11",
  "httpx>=0.27",
  "websocket-client>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
chatgpt-api = "chatgpt_api.cli:main"

[tool.setuptools.packages.find]
include = ["chatgpt_api*"]
